@@ -7,6 +7,7 @@ import com.xuanluan.practice.paygate.util.FileLoaderUtil;
 import lombok.RequiredArgsConstructor;
 import org.springframework.shell.standard.ShellComponent;
 import org.springframework.shell.standard.ShellMethod;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Set;
@@ -17,25 +18,22 @@ import java.util.stream.Collectors;
 public class PaymentMethodShell {
     private final IPaymentMethodRepository paymentMethodRepository;
 
+    @Transactional
     @ShellMethod(key = "payment_method:import", value = "Import payment_methods")
     public void importData() {
         String fileName = "db/seed/payment_methods.json";
         List<PaymentMethod> allData = FileLoaderUtil.loadFromJson(fileName, PaymentMethod.class);
 
-        Set<String> codes = paymentMethodRepository.findBy(
-                PaymentMethodSpec.activeWithCode(allData.stream().map(PaymentMethod::getCode).collect(Collectors.toList())),
-                query -> query.all().stream().map(PaymentMethod::getCode).collect(Collectors.toSet())
-        );
+        Set<String> codes = paymentMethodRepository.findAll(PaymentMethodSpec.activeWithCode(allData.stream().map(PaymentMethod::getCode).toList())).stream()
+                .map(PaymentMethod::getCode).collect(Collectors.toSet());
 
-        List<PaymentMethod> newData = allData.stream()
-                .filter(method -> !codes.contains(method.getCode()))
-                .collect(Collectors.toList());
+        List<PaymentMethod> newData = allData.stream().filter(method -> !codes.contains(method.getCode())).toList();
         if (!newData.isEmpty()) {
             paymentMethodRepository.saveAllAndFlush(newData);
             System.out.printf("Imported %d new payment methods\n", newData.size());
             System.out.printf(
                     "Imported payment methods with codes: %s \n",
-                    newData.stream().map(PaymentMethod::getCode).collect(Collectors.toList())
+                    newData.stream().map(PaymentMethod::getCode).toList()
             );
         } else {
             System.out.println("No new payment methods to import");
